--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
   list-style: none;
   text-decoration: none;
 }
-
+/*
+3E6E7A
+577574
+469B4E
+7AC25B
+B1F8F2
+*/
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
