--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --Primary: #3e6e7a;
+  --Fondo: #577574;
+  --Secondary: #7ac25b;
+  --Titleh: #469b4e;
+  --font: #b1f8f2;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,16 +14,16 @@
   text-decoration: none;
 }
 /*
-3E6E7A
-577574
-469B4E
-7AC25B
-B1F8F2
+
+
+
+
+
 */
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: #577574;
+  background-color: var(--Fondo);
 }
 
 nav {
@@ -23,7 +31,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 5px 30px;
-  background-color: #3e6e7a;
+  background-color: var(--Primary);
   margin: 20px 6.5% 0 6.5%;
   border: 0.1px solid #ffffff04;
   border-radius: 3px;
@@ -34,9 +42,19 @@ nav img {
   border-radius: 5px;
 }
 ul a {
-  color: #b1f8f2;
+  color: var(--font);
 }
 ul {
   display: flex;
   gap: 25px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.hero {
+  display: flex;
+  gap: 5px;
 }
