hero & nuevos setttings

--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
   --Primary: #3e6e7a;
   --Fondo: #577574;
   --Secondary: #7ac25b;
-  --Titleh: #469b4e;
+  --Titleh: rgba(0, 0, 0, 0.931);
   --font: #b1f8f2;
 }
 
+/*-----------------------------------------estilos del doc gral. y reseteos---------------------*/
 * {
   margin: 0;
   padding: 0;
@@ -13,48 +14,107 @@
   list-style: none;
   text-decoration: none;
 }
-/*
-
-
-
-
-
-*/
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: var(--Fondo);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
 }
-
+/*--------------------------------------estilos navbar-header---------------------------------*/
+header {
+  width: 100%;
+  max-width: 1000px;
+}
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 30px;
   background-color: var(--Primary);
-  margin: 20px 6.5% 0 6.5%;
-  border: 0.1px solid #ffffff04;
-  border-radius: 3px;
-  box-shadow: 1px 1px 4px #174552a8;
+  border-bottom: 1px solid #0000001c;
+  border-radius: 5px 5px 0 0;
+  /*box-shadow: 1px 1px 4px #174552a8;*/
 }
 nav img {
   width: 75px;
   border-radius: 5px;
 }
 ul a {
-  color: var(--font);
+  color: var(--Titleh);
+  font-weight: 650;
+  font-size: 1.1rem;
 }
 ul {
   display: flex;
   gap: 25px;
 }
-
+/*----------------------------------------estilos main gral.-------------------*/
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  max-width: 1000px;
+  height: 100%;
+  background-color: var(--Primary);
+  border-radius: 0 0 5px 5px;
 }
+/*-----------------------------------estilos gral para los seccions-------------------------*/
+.seccion {
+  padding: 2rem 5rem;
+}
+/*-----------------estilos hero 1er section---------------------------------------------*/
 .hero {
   display: flex;
-  gap: 5px;
+  width: 100%;
+}
+.hero > div {
+  width: 50%;
+}
+.hero-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+}
+.hero-info h1 {
+  color: var(--Titleh);
+  font-size: 2rem;
+  font-weight: 700;
+}
+.hero-info p {
+  font-weight: 600;
+}
+
+.btn-hero {
+  width: 75%;
+  display: flex;
+  gap: 15px;
+}
+.btn {
+  width: 50%;
+  border-radius: 50px;
+  padding: 10px 25px;
+  background-color: #00000000;
+  border: 2px solid var(--Titleh);
+  font-weight: 700;
+}
+.btn-primary {
+  background-color: var(--Titleh);
+  color: var(--Primary);
+}
+.hero-img {
+  display: flex;
+  justify-content: end;
+}
+.hero-img img {
+  width: 75%;
+}
+/*----------------------------------------- descripcion 2do section-----------------------*/
+.descripcion {
+  padding: 4rem 13rem;
+  text-align: center;
 }
