--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,10 +1,11 @@
 :root {
-  --Primary: #3e6e7a;
-  --Fondo: #577574;
+  --Primary: #abc8c0;
+  --Fondo: #daf7dc;
   --Secondary: #7ac25b;
-  --Titleh: rgba(0, 0, 0, 0.931);
+  --Titleh: rgba(0, 0, 0, 0.891);
   --font: #b1f8f2;
 }
+/*--Fondo: #577574; 3e6e7a*/
 
 /*-----------------------------------------estilos del doc gral. y reseteos---------------------*/
 * {
@@ -42,6 +43,15 @@ nav img {
   width: 75px;
   border-radius: 5px;
 }
+nav i {
+  font-size: 25px;
+}
+nav label {
+  display: none;
+}
+nav input {
+  display: none;
+}
 ul a {
   color: var(--Titleh);
   font-weight: 650;
@@ -60,7 +70,6 @@ main {
   max-width: 1000px;
   height: 100%;
   background-color: var(--Primary);
-  border-radius: 0 0 5px 5px;
 }
 /*-----------------------------------estilos gral para los seccions-------------------------*/
 .seccion {
@@ -115,9 +124,136 @@ main {
 }
 /*----------------------------------------- descripcion 2do section-----------------------*/
 .descripcion {
-  padding: 4rem 13rem;
+  padding: 4rem 10rem;
   text-align: center;
 }
 .descripcion p {
   font-weight: 600;
 }
+.ventajas {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
+  text-align: center;
+}
+.ventajas > p {
+  padding: 0 5rem;
+}
+.ventajas > h2 {
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.cards {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.card {
+  background-color: var(--Fondo);
+  border-radius: 7px;
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 0.9rem 1rem;
+}
+.card > span {
+  scale: 1.4;
+}
+footer {
+  width: 100%;
+  max-width: 1000px;
+  background-color: var(--Primary);
+  display: flex;
+  flex-direction: column;
+}
+.copy {
+  width: 100%;
+  text-align: center;
+  background-color: #7ac25b;
+  padding: 0.5rem;
+}
+.contact {
+  display: flex;
+  padding: 0;
+}
+.contactar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 3rem;
+  width: 40%;
+  align-items: center;
+  background-color: black;
+  color: white;
+}
+.contacto {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  width: 100%;
+}
+.contacto h2 {
+  font-size: 175%;
+  text-align: center;
+}
+.contacto form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.contacto input,
+button {
+  border-radius: 5px;
+  border-style: none;
+  padding: 0.5rem;
+  width: 100%;
+}
+input:hover {
+  scale: 1.1;
+  transition: all 0.5s;
+}
+
+.map {
+  width: 60%;
+  height: 500px;
+}
+.map iframe {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px 0 0 5px;
+}
+.redes {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+.redes i {
+  scale: 1.5;
+}
+/*.btn::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transform: translateX(-100%);
+   transform: translateX(0%); 
+  transition: all 0.5s;
+}
+
+.btn:hover::before {
+  transform: translateX(0);
+}
+
+.btn:hover {
+  color: #000;
+   background-color: white; 
+}*/
