--- a/estilos/style.css
+++ b/estilos/style.css
@@ -130,6 +130,7 @@ main {
 .descripcion p {
   font-weight: 600;
 }
+/*------------------------------------------nuestras ventajas-------------------------------*/
 .ventajas {
   display: flex;
   flex-direction: column;
@@ -164,6 +165,7 @@ main {
 .card > span {
   scale: 1.4;
 }
+/*-------------------footer----------------------------------------------------------------*/
 footer {
   width: 100%;
   max-width: 1000px;
@@ -171,12 +173,7 @@ footer {
   display: flex;
   flex-direction: column;
 }
-.copy {
-  width: 100%;
-  text-align: center;
-  background-color: #7ac25b;
-  padding: 0.5rem;
-}
+/*--------------------------mapa y formulario de contacto----------------------------------*/
 .contact {
   display: flex;
   padding: 0;
@@ -217,7 +214,6 @@ input:hover {
   scale: 1.1;
   transition: all 0.5s;
 }
-
 .map {
   width: 60%;
   height: 500px;
@@ -234,6 +230,13 @@ input:hover {
 }
 .redes i {
   scale: 1.5;
+}
+/*------------------------copyright-----------------------------------------------------------*/
+.copy {
+  width: 100%;
+  text-align: center;
+  background-color: #7ac25b;
+  padding: 0.5rem;
 }
 /*.btn::before {
   content: '';
